[gd_scene load_steps=11 format=3 uid="uid://dngb7f2hlbrxh"]

[ext_resource type="Script" uid="uid://dmsqa0uv6qynv" path="res://scripts/player/player_hands_PINGPONG.gd" id="1_cj71s"]
[ext_resource type="Texture2D" uid="uid://cb0v8wmpwl7nl" path="res://hand sprites/open hand.png" id="2_u6f72"]
[ext_resource type="Texture2D" uid="uid://dd1uxcrghspfr" path="res://intro sprites/TextBG6.png" id="3_hk3xo"]
[ext_resource type="Script" uid="uid://cujlduaqdkpvi" path="res://scripts/managers/mgIntro_manager.gd" id="4_6yhgi"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="5_8d6j6"]
[ext_resource type="Texture2D" uid="uid://ddxgo2saijcvr" path="res://footer.png" id="6_nxrlt"]
[ext_resource type="Script" uid="uid://ho5oyn8p3ner" path="res://scripts/managers/footer_manager.gd" id="7_sfi1e"]
[ext_resource type="Texture2D" uid="uid://bbsvjnu6h384i" path="res://hand sprites/heart hand.png" id="8_2iy5l"]
[ext_resource type="Texture2D" uid="uid://bptvtgxhawegg" path="res://footer-timer-background.png" id="9_78mdk"]
[ext_resource type="Texture2D" uid="uid://bwex4tit2aiyt" path="res://footer-timer.png" id="10_744lu"]

[node name="Ham" type="Node2D"]

[node name="CanvasGroup" type="CanvasGroup" parent="."]
position = Vector2(540, 540)
script = ExtResource("1_cj71s")

[node name="Hand1" type="Sprite2D" parent="CanvasGroup"]
z_index = 10
texture_filter = 1
position = Vector2(-50, 100)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_u6f72")

[node name="Hand2" type="Sprite2D" parent="CanvasGroup"]
z_index = 10
texture_filter = 1
position = Vector2(50, 100)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_u6f72")
flip_h = true

[node name="TextBg1" type="Sprite2D" parent="."]
z_index = 15
texture_filter = 1
position = Vector2(530, 400)
scale = Vector2(3, 2)
texture = ExtResource("3_hk3xo")
script = ExtResource("4_6yhgi")

[node name="Label" type="Label" parent="TextBg1"]
z_index = 15
anchors_preset = -1
anchor_left = 0.17228465
anchor_top = 0.22580644
anchor_right = 1.0599251
anchor_bottom = 0.7741935
offset_left = -85.66667
offset_top = -59.5
offset_right = -53.66667
offset_bottom = -59.5
scale = Vector2(0.6, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8d6j6")
theme_override_font_sizes/font_size = 64
text = "CUT"
metadata/_edit_use_anchors_ = true

[node name="Footer" type="Sprite2D" parent="."]
z_index = 10
texture_filter = 1
position = Vector2(536, 1024)
scale = Vector2(1.1, 1.06)
texture = ExtResource("6_nxrlt")
script = ExtResource("7_sfi1e")

[node name="HeartHand" type="Sprite2D" parent="Footer"]
modulate = Color(0.8891468, 0.8891468, 0.88914675, 1)
z_index = 2
texture_filter = 1
position = Vector2(368.46835, -13.207642)
scale = Vector2(0.7, 0.733)
texture = ExtResource("8_2iy5l")

[node name="Label" type="Label" parent="Footer"]
anchors_preset = -1
anchor_left = 0.71171165
anchor_top = 0.33262315
anchor_right = 0.8057116
anchor_bottom = 1.018107
offset_left = -500.00003
offset_top = -62.0
offset_right = -500.0
offset_bottom = -62.000008
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8d6j6")
theme_override_font_sizes/font_size = 64
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Footer"]
anchors_preset = -1
anchor_left = 0.6657657
anchor_top = 0.19567865
anchor_right = 0.7597657
anchor_bottom = 0.8811625
offset_left = -500.0
offset_top = -62.0
offset_right = -500.0
offset_bottom = -62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8d6j6")
theme_override_font_sizes/font_size = 80
text = "3"
metadata/_edit_use_anchors_ = true

[node name="TimerColor" type="ColorRect" parent="Footer"]
z_index = 1
offset_left = -361.26123
offset_top = -38.67926
offset_right = -321.26123
offset_bottom = 1.3207397
scale = Vector2(11.25, 1.85)
color = Color(1, 0, 0, 1)

[node name="FooterTimerBackground" type="Sprite2D" parent="Footer"]
position = Vector2(-60.36035, 0)
scale = Vector2(0.9009008, 0.94339615)
texture = ExtResource("9_78mdk")

[node name="FooterTimer" type="Sprite2D" parent="Footer"]
z_index = 1
position = Vector2(-60.36035, 9.536743e-05)
scale = Vector2(0.90090084, 0.9433962)
texture = ExtResource("10_744lu")
